feat: Refactor game room and room manager to improve player input handling and game state management

--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,9 @@
 {
   "type": "module",
-  "name": "bomberman-server",
-  "version": "1.0.0",
-  "description": "Bomberman multiplayer game server",
-  "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "dependencies": {
+    "ws": "^8.18.3"
   }
 }
